update demo one

--- a/demo/one/index.html
+++ b/demo/one/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>material design lite grid components for Golang</title>
+  <title>material design lite layout components for Golang and vecty</title>
   <script src="https://wizenerd.github.io/ui/layout/one/one.js"></script>
 </head>
 
